--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": false,
   "root": "build/",
+  "proxies": {
+    "/api/": {
+      "origin": "https://dl-final.herokuapp.com/api/"
+    }
+  },
   "proxy": "https://dl-final.herokuapp.com/",
   "repository": {
     "url": "https://github.com/Dandush03/FinalCapstone.BackEnd",
