--- a/.stickler.yml
+++ b/.stickler.yml
@@ -2,12 +2,7 @@
 linters:
   eslint:
     # indicate where is the config file for stylelint
-    config: './client/.eslintrc.json'
-
-  rubocop:
-    display_cop_names: true
-    # indicate where is the config file for stylelint
-    config: './rubocop.yml'
+    config: '.eslintrc.json'
     
   #stylelint:
     # indicate where is the config file for stylelint
