--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     "rules": {
         "import/no-extraneous-dependencies": 0,
         "import/no-unresolved": 0,
-        "no-shadow": 0
+        "no-shadow": 0,
+        "no-undef": 0,
+        "react/display-name": 0
     }
 }
