--- a/.stickler.yml
+++ b/.stickler.yml
@@ -2,7 +2,7 @@
 linters:
   eslint:
     # indicate where is the config file for stylelint
-    config: '.eslintrc.json'
+    config: './.eslintrc.json'
     
   #stylelint:
     # indicate where is the config file for stylelint
